fix: speedup website loading by not using LXGW font
1. LXGW font file is 3.5Mb which is too large for a website loading,
   not using is the work around way and the best option is CDN, but
   not for now.
2. update gscan version from ghost
3. update local git configuration for developing environment issue

--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -16,7 +16,7 @@
     --twitter-color: #1da1f2;
     --rss-color: #f26522;
     --animation-base: ease-in-out;
-    --font-base: 'LXGW Bright', Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+    --font-base: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, 'LXGW Bright';
     /* stylelint-disable-line value-keyword-case */
     --font-serif: Lora, Times, serif;
     /* stylelint-disable-line value-keyword-case */
